# models/expense_records.go
@@ -14,6 +14,7 @@ type Expense_records struct {
 	ExpenseRecordId  int64               `orm:"auto"`
 	Category         *Payment_categories `orm:"rel(fk); column(category)"`
 	ReceiptImagePath string
+	Branch           string
 	Description      string           `orm:"size(255)"`
 	Currency         *Currencies      `orm:"rel(fk);column(currency_id)"`
 	PaymentMethod    *Payment_methods `orm:"rel(fk);column(payment_method_id)"`
@@ -49,10 +50,104 @@ func GetExpense_recordsById(id int64) (v *Expense_records, err error) {
 	return nil, err
 }
 
+// GetOrderCount retrieves Items by Id. Returns error if
+// Id doesn't exist
+func GetExpenseRecordCount() (c int64, err error) {
+	o := orm.NewOrm()
+	if c, err = o.QueryTable(new(Expense_records)).Count(); err == nil {
+		return c, nil
+	}
+	return 0, err
+}
+
+// GetOrderCount retrieves Items by Id. Returns error if
+// Id doesn't exist
+func GetExpenseRecordCountByType() (c int64, err error) {
+	o := orm.NewOrm()
+	if c, err = o.QueryTable(new(Expense_records)).Count(); err == nil {
+		return c, nil
+	}
+	return 0, err
+}
+
 // GetAllExpense_records retrieves all Expense_records matches certain condition. Returns empty list if
 // no records exist
 func GetAllExpense_records(query map[string]string, fields []string, sortby []string, order []string,
 	offset int64, limit int64) (ml []interface{}, err error) {
+	o := orm.NewOrm()
+	qs := o.QueryTable(new(Expense_records))
+	// query k=v
+	for k, v := range query {
+		// rewrite dot-notation to Object__Attribute
+		k = strings.Replace(k, ".", "__", -1)
+		qs = qs.Filter(k, v)
+	}
+	// order by:
+	var sortFields []string
+	if len(sortby) != 0 {
+		if len(sortby) == len(order) {
+			// 1) for each sort field, there is an associated order
+			for i, v := range sortby {
+				orderby := ""
+				if order[i] == "desc" {
+					orderby = "-" + v
+				} else if order[i] == "asc" {
+					orderby = v
+				} else {
+					return nil, errors.New("Error: Invalid order. Must be either [asc|desc]")
+				}
+				sortFields = append(sortFields, orderby)
+			}
+			qs = qs.OrderBy(sortFields...)
+		} else if len(sortby) != len(order) && len(order) == 1 {
+			// 2) there is exactly one order, all the sorted fields will be sorted by this order
+			for _, v := range sortby {
+				orderby := ""
+				if order[0] == "desc" {
+					orderby = "-" + v
+				} else if order[0] == "asc" {
+					orderby = v
+				} else {
+					return nil, errors.New("Error: Invalid order. Must be either [asc|desc]")
+				}
+				sortFields = append(sortFields, orderby)
+			}
+		} else if len(sortby) != len(order) && len(order) != 1 {
+			return nil, errors.New("Error: 'sortby', 'order' sizes mismatch or 'order' size is not 1")
+		}
+	} else {
+		if len(order) != 0 {
+			return nil, errors.New("Error: unused 'order' fields")
+		}
+	}
+
+	var l []Expense_records
+	qs = qs.OrderBy(sortFields...).RelatedSel()
+	if _, err = qs.Limit(limit, offset).All(&l, fields...); err == nil {
+		if len(fields) == 0 {
+			for _, v := range l {
+				ml = append(ml, v)
+			}
+		} else {
+			// trim unused fields
+			for _, v := range l {
+				m := make(map[string]interface{})
+				val := reflect.ValueOf(v)
+				for _, fname := range fields {
+					m[fname] = val.FieldByName(fname).Interface()
+				}
+				ml = append(ml, m)
+			}
+		}
+		return ml, nil
+	}
+	return nil, err
+}
+
+// GetAllExpense_records retrieves all Expense_records matches certain condition. Returns empty list if
+// no records exist
+func GetAllExpense_recordsByBranch(query map[string]string, fields []string, sortby []string, order []string,
+	offset int64, limit int64, branch string) (ml []interface{}, err error) {
 	o := orm.NewOrm()
 	qs := o.QueryTable(new(Expense_records))
 	// query k=v
